<resources>

    <string name="app_name">api-v2-android-client</string>
    <string name="hello_world">Welcome to Apontador API</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">api-v2-android-client</string>
    <string name="password_flow_label">Password Flow</string>
    <string name="client_credentials_flow_label">Client-Credentials Flow</string>

    <string name="user_label">User:</string>
    <string name="sample_user_value">testes@apontador.com</string>
    <string name="password_label">Password:</string>
    <string name="sample_password_value">123456</string>    
    <string name="submit_label">Submit</string>
    
</resources>