<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:padding="30dip">
   
    <TextView
        android:id="@+id/oauth_data_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/user_label"
        />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/sample_user_value"
        android:ems="10">
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/resource_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
         />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_password_value"
        android:ems="10"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_label" />
    
</LinearLayout>

