<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:padding="30dip">
   
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

   <Button
      android:id="@+id/button_passwordflow"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/password_flow_label" />

   <Button
      android:id="@+id/button_clientcredentialsflow"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/client_credentials_flow_label" />

</LinearLayout>

